@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.4399 2013/12/07 00:54:15 wiz Exp $
+$NetBSD: CHANGES-2013,v 1.4400 2013/12/07 00:59:02 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -6462,3 +6462,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated converters/p5-JSON-PP to 2.27203 [wiz 2013-12-07]
 	Updated devel/p5-CPAN-Meta to 2.133380 [wiz 2013-12-07]
 	Updated devel/p5-ExtUtils-MakeMaker to 6.84nb1 [wiz 2013-12-07]
+	Removed devel/p5-ExtUtils-Install [wiz 2013-12-07]
